--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://robotechshop.github.io/robotech-shop",
+  "homepage": "https://robotechshop.github.io/robotechshop",
   "name": "robotechshop-react",
   "version": "0.1.0",
   "private": true,
