--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://robotechshop.github.io/robotechshop",
+  "homepage": "https://mlbakhshi.github.io/robotechshop",npm install gh-pages --save-dev
   "name": "robotechshop-react",
   "version": "0.1.0",
   "private": true,
