توضیح درباره تغییرات مثلا: اصلاح نمایش محصولات

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mlbakhshi.github.io/robotechshop",npm install gh-pages --save-dev
+  "homepage": "https://mlbakhshi.github.io/robotechshop-repository",
   "name": "robotechshop-react",
   "version": "0.1.0",
   "private": true,
