deploy build to infinity

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mlbakhshi.github.io/robotechshop-repository",
+  "homepage": ".",
   "name": "robotechshop-react",
   "version": "0.1.0",
   "private": true,
