--- a/package.json
+++ b/package.json
@@ -1,51 +1,102 @@
 {
 
   "name": "robotechshop-react",
+
   "version": "0.1.0",
+
   "private": true,
+
   "dependencies": {
+
+    "@fortawesome/fontawesome-free": "^7.0.0",
+
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+
     "@fortawesome/react-fontawesome": "^0.2.2",
+
     "bootstrap": "^5.3.3",
+
     "cra-template": "1.2.0",
+
     "font-awesome": "^4.7.0",
+
     "formik": "^2.4.6",
+
     "react": "^19.0.0",
+
     "react-bootstrap": "^2.10.9",
+
     "react-dom": "^19.0.0",
+
     "react-multi-date-picker": "^4.5.2",
+
     "react-router-dom": "^7.1.1",
+
     "react-scripts": "5.0.1",
+
     "yup": "^1.6.1"
+
   },
+
   "scripts": {
+
     "start": "react-scripts start",
+
     "build": "react-scripts build",
+
     "test": "react-scripts test",
+
     "eject": "react-scripts eject",
+
     "predeploy": "npm run build",
+
     "deploy": "gh-pages -d build"
+
   },
+
   "eslintConfig": {
+
     "extends": [
+
       "react-app",
+
       "react-app/jest"
+
     ]
+
   },
+
   "browserslist": {
+
     "production": [
+
       ">0.2%",
+
       "not dead",
+
       "not op_mini all"
+
     ],
+
     "development": [
+
       "last 1 chrome version",
+
       "last 1 firefox version",
+
       "last 1 safari version"
+
     ]
+
   },
+
   "devDependencies": {
+
     "gh-pages": "^6.3.0"
+
   }
+
 }
+
